# welltestpy

./: .coveragerc  .gitignore  .travis.yml  .zenodo.json  CHANGELOG.md  CITATION.bib  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_setup.txt  setup.cfg  setup.py
.github/workflows/: main.yml
.spyproject/: workspace.ini
docs/: Makefile  requirements.txt  requirements_doc.txt
docs/source/: api.rst  campaignlib.rst  conf.py  contents.rst  data.campaignlib.rst  data.data_io.rst  data.rst  data.testslib.rst  data.varlib.rst  estimate.estimatelib.rst  estimate.rst  estimate.spotpy_classes.rst  estimatelib.rst  index.rst  main.rst  package.rst  process.rst  spotpy_classes.rst  testslib.rst  tools.rst  tutorial_01_create.rst  tutorial_02_estimate.rst  tutorials.rst  varlib.rst
docs/source/_templates/: layout.html
examples/: 01_create.py  02_estimate.py  03_estimate_hetero.py  04_estimate_steady.py  05_estimate_steady_het.py  06_triangulate.py  07_diagnostic_plot.py  08_Cooper_Jacob.py  Cmp_UFZ-campaign.cmp  README.rst
examples/Estimate_theis/: 2019-09-12_13-33-31_FAST_estimate.txt  2019-09-12_13-33-31_FAST_estimate_S1.txt  2019-09-12_13-33-31_sensitivity_db.csv  2019-09-12_13-45-21_db.csv  2019-09-12_13-45-21_estimate.txt  2019-09-12_13-45-24_FAST_estimate.txt  2019-09-12_13-45-24_FAST_estimate_S1.txt  2019-09-12_13-45-24_sensitivity_db.csv  2019-09-12_14-00-28_db.csv  2019-09-12_14-00-28_estimate.txt  2019-09-12_14-00-32_FAST_estimate.txt  2019-09-12_14-00-32_FAST_estimate_S1.txt  2019-09-12_14-00-32_sensitivity_db.csv
src/welltestpy/: __init__.py
src/welltestpy/data/: __init__.py  campaignlib.py  data_io.py  testslib.py  varlib.py
src/welltestpy/estimate/: __init__.py  estimators.py  spotpylib.py  steady_lib.py  transient_lib.py
src/welltestpy/process/: __init__.py  processlib.py
src/welltestpy/tools/: __init__.py  diagnostic_plots.py  plotter.py  trilib.py
tests/: Cmp_UFZ-campaign.cmp  test_process.py  test_welltestpy.py
tests/est_ext_thiem2D/: 2020-04-01_23-17-57_db.csv  2020-04-01_23-17-57_estimate.txt  2020-04-01_23-18-02_FAST_estimate.txt  2020-04-01_23-18-02_FAST_estimate_S1.txt  2020-04-01_23-18-02_sensitivity_db.csv  2020-04-01_23-19-05_db.csv  2020-04-01_23-19-05_estimate.txt  2020-04-01_23-19-10_FAST_estimate.txt  2020-04-01_23-19-10_FAST_estimate_S1.txt  2020-04-01_23-19-10_sensitivity_db.csv  2020-04-01_23-19-49_db.csv  2020-04-01_23-19-49_estimate.txt  2020-04-01_23-19-54_FAST_estimate.txt  2020-04-01_23-19-54_FAST_estimate_S1.txt  2020-04-01_23-19-54_sensitivity_db.csv  2020-04-01_23-20-43_db.csv  2020-04-01_23-20-43_estimate.txt  2020-04-01_23-20-48_FAST_estimate.txt  2020-04-01_23-20-48_FAST_estimate_S1.txt  2020-04-01_23-20-48_sensitivity_db.csv
tests/est_ext_thiem3D/: 2020-04-01_23-18-03_db.csv  2020-04-01_23-18-03_estimate.txt  2020-04-01_23-18-11_FAST_estimate.txt  2020-04-01_23-18-11_FAST_estimate_S1.txt  2020-04-01_23-18-11_sensitivity_db.csv  2020-04-01_23-19-12_db.csv  2020-04-01_23-19-12_estimate.txt  2020-04-01_23-19-20_FAST_estimate.txt  2020-04-01_23-19-20_FAST_estimate_S1.txt  2020-04-01_23-19-20_sensitivity_db.csv  2020-04-01_23-19-56_db.csv  2020-04-01_23-19-56_estimate.txt  2020-04-01_23-20-03_FAST_estimate.txt  2020-04-01_23-20-03_FAST_estimate_S1.txt  2020-04-01_23-20-03_sensitivity_db.csv  2020-04-01_23-20-49_db.csv  2020-04-01_23-20-49_estimate.txt  2020-04-01_23-20-57_FAST_estimate.txt  2020-04-01_23-20-57_FAST_estimate_S1.txt  2020-04-01_23-20-57_sensitivity_db.csv
tests/est_theis/: 2020-04-01_23-18-14_db.csv  2020-04-01_23-18-14_estimate.txt  2020-04-01_23-18-17_FAST_estimate.txt  2020-04-01_23-18-17_FAST_estimate_S1.txt  2020-04-01_23-18-17_sensitivity_db.csv  2020-04-01_23-19-23_db.csv  2020-04-01_23-19-23_estimate.txt  2020-04-01_23-19-26_FAST_estimate.txt  2020-04-01_23-19-26_FAST_estimate_S1.txt  2020-04-01_23-19-26_sensitivity_db.csv  2020-04-01_23-20-07_db.csv  2020-04-01_23-20-07_estimate.txt  2020-04-01_23-20-10_FAST_estimate.txt  2020-04-01_23-20-10_FAST_estimate_S1.txt  2020-04-01_23-20-10_sensitivity_db.csv  2020-04-01_23-21-00_db.csv  2020-04-01_23-21-00_estimate.txt  2020-04-01_23-21-03_FAST_estimate.txt  2020-04-01_23-21-03_FAST_estimate_S1.txt  2020-04-01_23-21-03_sensitivity_db.csv
tests/est_thiem/: 2020-04-01_23-18-18_db.csv  2020-04-01_23-18-18_estimate.txt  2020-04-01_23-18-21_FAST_estimate.txt  2020-04-01_23-18-21_FAST_estimate_S1.txt  2020-04-01_23-18-21_sensitivity_db.csv  2020-04-01_23-19-26_db.csv  2020-04-01_23-19-26_estimate.txt  2020-04-01_23-19-30_FAST_estimate.txt  2020-04-01_23-19-30_FAST_estimate_S1.txt  2020-04-01_23-19-30_sensitivity_db.csv  2020-04-01_23-20-10_db.csv  2020-04-01_23-20-10_estimate.txt  2020-04-01_23-20-14_FAST_estimate.txt  2020-04-01_23-20-14_FAST_estimate_S1.txt  2020-04-01_23-20-14_sensitivity_db.csv  2020-04-01_23-21-04_db.csv  2020-04-01_23-21-04_estimate.txt  2020-04-01_23-21-06_FAST_estimate.txt  2020-04-01_23-21-06_FAST_estimate_S1.txt  2020-04-01_23-21-06_sensitivity_db.csv
welltestpy/: __init__.py  _version.py
welltestpy/data/: __init__.py  campaignlib.py  data_io.py  testslib.py  varlib.py
welltestpy/estimate/: __init__.py  estimatelib.py  estimators.py  spotpy_classes.py  spotpylib.py  steady_lib.py  transient_lib.py
welltestpy/process/: __init__.py  processlib.py
welltestpy/tools/: __init__.py  _extimport.py  diagnostic_plots.py  plotter.py  triangulate.py  trilib.py
