[metadata]
name = welltestpy
description = welltestpy - package to handle well-based Field-campaigns.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GeoStat-Framework/welltestpy
author = Sebastian Mueller
author_email = sebastian.mueller@ufz.de
maintainer = Sebastian Mueller
maintainer_email = sebastian.mueller@ufz.de
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Utilities
project_urls =
    Documentation = https://welltestpy.readthedocs.io
    Source = https://github.com/GeoStat-Framework/welltestpy
    Tracker = https://github.com/GeoStat-Framework/welltestpy/issues
    Changelog = https://github.com/GeoStat-Framework/welltestpy/blob/main/CHANGELOG.md
    Conda-Forge = https://anaconda.org/conda-forge/welltestpy

[options]
packages = find:
install_requires =
    anaflow>=1.0.0,<2
    matplotlib>=3.0.0,<4
    numpy>=1.14.5,<2
    pandas>=0.23.2,<2
    scipy>=1.1.0,<2
    spotpy>=1.5.0,<2
    packaging>=20
python_requires = >=3.6
zip_safe = False

[options.packages.find]
exclude =
    tests*
    docs*

[options.extras_require]
doc =
    m2r2>=0.2.8,<1
    numpydoc>=1.1,<2
    sphinx>=3,<4
    sphinx-gallery>=0.8,<1
    sphinx-rtd-theme>=0.5,<1
test =
    coverage[toml]>=5.2.1,<6
    pytest>=6.0,<7
    pytest-cov>=2.11.0,<3
